--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dompurify": "^3.2.7",
     "idb": "^8.0.3",
+    "idb-keyval": "^6.2.2",
+    "quill": "^2.0.3",
+    "quill-delta-to-html": "^0.12.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
